divide header into four corners with grid. Issue stretching search bar to to cell

--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ li {
   grid-column: 2;
   grid-row: 1;
   background-color: rgb(255, 255, 255);
-  border: 1px solid black;
+  border: 1px solid rgb(206, 38, 38);
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
+  grid-template: 1fr 1fr / 2fr 1fr;
+  gap: 10px;
 }
 .main-content {
   grid-column: 2;
@@ -65,16 +66,21 @@ li {
 
 .search-input-header,
 .welcome-user-header {
-  border: 1px solid;
+  border: 1px solid red;
   justify-self: start;
   align-self: center;
+
+  /* Created for better visibility of grid borders */
+  min-width: 100%;
 }
 
 .usr-info-header,
 .btns-header {
-  border: 1px solid;
+  border: 1px solid red;
   justify-self: end;
   align-self: center;
+  /* Created for better visibility of grid borders */
+  min-width: 100%;
 }
 
 .user-name-heading {
@@ -85,7 +91,7 @@ li {
 
 #search {
   background-color: aquamarine;
-  width: 500px;
+  min-width: 100%;
 }
 
 div[class="usr-info-header"] > h3 {
